// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextMatch template matches snapshot 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
  <ipl-small-toggle-stub label=\\"Choose teams manually\\" modelvalue=\\"false\\" disabled=\\"false\\" data-test=\\"choose-manually-toggle\\"></ipl-small-toggle-stub>
  <ipl-small-toggle-stub label=\\"Show on stream\\" modelvalue=\\"true\\" disabled=\\"false\\" class=\\"m-t-4\\" data-test=\\"show-on-stream-toggle\\"></ipl-small-toggle-stub>
</div>
<highlighted-match-picker-stub class=\\"m-t-8\\"></highlighted-match-picker-stub>"
`;

exports[`NextMatch template matches snapshot when choosing teams manually 1`] = `
"<ipl-error-display-stub class=\\"m-b-8\\"></ipl-error-display-stub>
<div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
  <ipl-small-toggle-stub label=\\"Choose teams manually\\" modelvalue=\\"true\\" disabled=\\"false\\" data-test=\\"choose-manually-toggle\\"></ipl-small-toggle-stub>
  <ipl-small-toggle-stub label=\\"Show on stream\\" modelvalue=\\"true\\" disabled=\\"false\\" class=\\"m-t-4\\" data-test=\\"show-on-stream-toggle\\"></ipl-small-toggle-stub>
</div>
<manual-team-picker-stub class=\\"m-t-8\\"></manual-team-picker-stub>"
`;
